Syntax: a syntax highlighting library for Ruby.

Unreleased
  Add Travis CI configuration - @pat.

1.2.1 01 June 2016
  Explicitly require 'set' - @jberkel.

1.2.0 02 Jan 2014
  Cleaned up Gemspec, added license and homepage - @grosser.

1.1.0 11 Dec 2013
  Published from https://github.com/dblock/syntax, a now maintained fork.
  The project builds again and runs, fixes by @dblock, @distler.

1.0.0: 18 Jun 2005
  Added user manual
  Fixed various bugs

0.7.0: 23 Mar 2005
  Added Syntax.all to enumerate all supported syntaxes.
  Much improved heredoc support.
  Support for syntax "regions"
  Added sample CSS files for the supported syntaxes
  Added the example "to_html.rb" script
  Bug fixes.

0.5.0: 11 Jan 2005
  First release.
