@@ -1,14 +1,16 @@
 language: ruby
-rvm:
-  - 1.8.7-p374
-  - 1.9.2-p330
-  - 1.9.3-p551
-  - 2.0.0-p648
-  - 2.1.10
-  - 2.2.7
-  - 2.3.4
-  - 2.4.1
-  - jruby-18mode
-  - jruby-19mode
-  - jruby-9.1.12.0
+matrix:
+  include:
+    - rvm: 1.8.7-p374
+    - rvm: 1.9.2-p330
+    - rvm: 1.9.3-p551
+    - rvm: 2.0.0-p648
+    - rvm: 2.1.10
+    - rvm: 2.2.7
+    - rvm: 2.3.4
+    - rvm: 2.4.1
+      env: RUBYOPT=--enable-frozen-string-literal
+    - rvm: jruby-18mode
+    - rvm: jruby-19mode
+    - rvm: jruby-9.1.12.0
 sudo: false
